# modern_x86_assembly

./: CMakeLists.txt  README.md
SourceCode/AppendixA/Example1/: Example1.cpp  Example1_.s
SourceCode/AppendixA/Example2/: CMakeLists.txt  Example2.cpp  Example2_.s
SourceCode/AppendixA/Example3/: CMakeLists.txt  Example3.cpp
SourceCode/AppendixA/Example4/: CMakeLists.txt  Example4.cpp
SourceCode/Chapter02/CalcArrayCubes/: CMakeLists.txt  CalcArrayCubes.cpp
SourceCode/Chapter02/CalcArraySquares/: CMakeLists.txt  CalcArraySquares.cpp  CalcArraySquares_.s  CalcArraySquares__CalcArraySquares_.asm  CalcArraySquares___Z19CalcArraySquaresCppPiPKii.asm
SourceCode/Chapter02/CalcArraySum/: CalcArraySum.cpp
SourceCode/Chapter02/CalcMatrixCubes/: CalcMatrixCubes.cpp
SourceCode/Chapter02/CalcMatrixRowColSums/: CalcMatrixRowColSums.cpp  CalcMatrixRowColSumsMisc.cpp
SourceCode/Chapter02/CalcStructSum/: CalcStructSum.cpp  CalcStructSum_.asm
SourceCode/Chapter02/CalcSum/: CalcSum.cpp
SourceCode/Chapter02/CalcSumTest/: CalcSumTest.cpp
SourceCode/Chapter02/CallingConvention/: CallingConvention.cpp
SourceCode/Chapter02/CompareArrays/: CompareArrays.cpp
SourceCode/Chapter02/ConcatStrings/: CMakeLists.txt  ConcatStrings.cpp
SourceCode/Chapter02/ConditionCodes/: ConditionCodes.cpp
SourceCode/Chapter02/CountChars/: CountChars.cpp
SourceCode/Chapter02/CreateStruct/: CreateStruct.cpp  CreateStruct_.asm  TestStruct.h
SourceCode/Chapter02/IntegerAddition/: IntegerAddition.cpp
SourceCode/Chapter02/IntegerMulDiv/: IntegerMulDiv.cpp
SourceCode/Chapter02/MemoryAddressing/: MemoryAddressing.cpp
SourceCode/Chapter02/ReverseArray/: ReverseArray.cpp
SourceCode/Chapter04/CalcLeastSquares/CalcLeastSquares/: CalcLeastSquares.cpp
SourceCode/Chapter04/CalcMeanStdev/CalcMeanStdev/: CalcMeanStdev.cpp
SourceCode/Chapter04/CalcMinMax/CalcMinMax/: CalcMinMax.cpp
SourceCode/Chapter04/CalcSphereAreaVolume/CalcSphereAreaVolume/: CalcSphereAreaVolume.cpp
SourceCode/Chapter04/ConvertCoordinates/ConvertCoordinates/: ConvertCoordinates.cpp
SourceCode/Chapter04/TemperatureConversions/TemperatureConversions/: TemperatureConversions.cpp
SourceCode/Chapter06/MmxAddition/MmxAddition/: MmxAddition.cpp
SourceCode/Chapter06/MmxCalcMean/MmxCalcMean/: MmxCalcMean.cpp  MmxCalcMean.h  MmxCalcMeanTimed.cpp
SourceCode/Chapter06/MmxCalcMinMax/MmxCalcMinMax/: MmxCalcMinMax.cpp  MmxCalcMinMax.h  MmxCalcMinMaxTimed.cpp
SourceCode/Chapter06/MmxMultiplication/MmxMultiplication/: MmxMultiplication.cpp
SourceCode/Chapter06/MmxShift/MmxShift/: MmxShift.cpp
SourceCode/Chapter08/SseScalarFloatingPointArithmetic/SseScalarFloatingPointArithmetic/: SseScalarFloatingPointArithmetic.cpp
SourceCode/Chapter08/SseScalarFloatingPointCompare/SseScalarFloatingPointCompare/: SseScalarFloatingPointCompare.cpp
SourceCode/Chapter08/SseScalarFloatingPointConversions/SseScalarFloatingPointConversions/: SseScalarFloatingPointConversions.cpp
SourceCode/Chapter08/SseScalarFloatingPointParallelograms/SseScalarFloatingPointParallelograms/: SseScalarFloatingPointParallelograms.cpp
SourceCode/Chapter08/SseScalarFloatingPointSpheres/SseScalarFloatingPointSpheres/: SseScalarFloatingPointSpheres.cpp
SourceCode/Chapter09/SsePackedFloatingPointArithmetic/SsePackedFloatingPointArithmetic/: SsePackedFloatingPointArithmetic.cpp
SourceCode/Chapter09/SsePackedFloatingPointCompare/SsePackedFloatingPointCompare/: SsePackedFloatingPointCompare.cpp
SourceCode/Chapter09/SsePackedFloatingPointConversions/SsePackedFloatingPointConversions/: SsePackedFloatingPointConversions.cpp
SourceCode/Chapter09/SsePackedFloatingPointLeastSquares/SsePackedFloatingPointLeastSquares/: SsePackedFloatingPointLeastSquares.cpp
SourceCode/Chapter09/SsePackedFloatingPointMatrix4x4/SsePackedFloatingPointMatrix4x4/: SsePackedFloatingPointMatrix4x4.cpp  SsePackedFloatingPointMatrix4x4.h  SsePackedFloatingPointMatrix4x4Fig8-3.cpp  SsePackedFloatingPointMatrix4x4Timed.cpp
SourceCode/Chapter10/SsePackedIntegerFundamentals/SsePackedIntegerFundamentals/: SsePackedIntegerFundamentals.cpp
SourceCode/Chapter10/SsePackedIntegerHistogram/SsePackedIntegerHistogram/: SsePackedIntegerHistogram.cpp  SsePackedIntegerHistogram.h  SsePackedIntegerHistogramTimed.cpp
SourceCode/Chapter10/SsePackedIntegerThreshold/SsePackedIntegerThreshold/: SsePackedIntegerThreshold.cpp  SsePackedIntegerThreshold.h  SsePackedIntegerThresholdTimed.cpp
SourceCode/Chapter11/SseTextStringCalcLength/SseTextStringCalcLength/: SseTextStringCalcLength.cpp
SourceCode/Chapter11/SseTextStringReplaceChar/SseTextStringReplaceChar/: SseTextStringReplaceChar.cpp
SourceCode/Chapter13/AvxScalarFloatingPointArithmetic/AvxScalarFloatingPointArithmetic/: AvxScalarFloatingPointArithmetic.cpp
SourceCode/Chapter13/AvxScalarFloatingPointCompare/AvxScalarFloatingPointCompare/: AvxScalarFloatingPointCompare.cpp
SourceCode/Chapter13/AvxScalarFloatingPointQuadEqu/AvxScalarFloatingPointQuadEqu/: AvxScalarFloatingPointQuadEqu.cpp
SourceCode/Chapter13/AvxScalarFloatingPointSpherical/AvxScalarFloatingPointSpherical/: AvxScalarFloatingPointSpherical.cpp
SourceCode/Chapter14/AvxPackedFloatingPointArithmetic/AvxPackedFloatingPointArithmetic/: AvxPackedFloatingPointArithmetic.cpp
SourceCode/Chapter14/AvxPackedFloatingPointColMeans/AvxPackedFloatingPointColMeans/: AvxPackedFloatingPointColMeans.cpp
SourceCode/Chapter14/AvxPackedFloatingPointCompare/AvxPackedFloatingPointCompare/: AvxPackedFloatingPointCompare.cpp
SourceCode/Chapter14/AvxPackedFloatingPointCorrCoef/AvxPackedFloatingPointCorrCoef/: AvxPackedFloatingPointCorrCoef.cpp
SourceCode/Chapter16/AvxFma/AvxFma/: AvxFma.cpp  (+2 more)
SourceCode/Chapter22/LinkedListPrefetch/: LinkedListPrefetch.cpp  LinkedListPrefetch.h  LinkedListPrefetchTimed.cpp
SourceCode/Chapter22/NonTemporalStore/: NonTemporalStore.cpp  NonTemporalStore.h  NonTemporalStoreTimed.cpp
SourceCode/CommonFiles/: ImageBuffer.cpp  ImageBuffer.h  Mat4x4.cpp  Mat4x4.h  MiscDefs.h  MmxVal.cpp  MmxVal.h  ThreadTimer.cpp  ThreadTimer.h  XmmVal.cpp  XmmVal.h  YmmVal.cpp  YmmVal.h
(+38 files in other folders)
